test/inference/good/coreml_record_access.mle
type t = {x : int}
let ['b 'a] (f : t -> int) = ['b 'a] fun (r : t) -> r[] .x