test/inference/bad/typeclass_use_r.mle
class R 'a { read : unit -> 'a }
let ['a] [ R 'a ] (r : 'a) = ['a] read['a] ()